# docs/swagger.yaml
@@ -376,6 +376,37 @@ paths:
       summary: Авторизация
       tags:
       - auth
+  /country:
+    get:
+      consumes:
+      - application/json
+      description: Возвращает страны
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/httpgin.Get_CountryById_Response'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httpgin.Error_Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httpgin.Error_Response'
+      summary: Получение стран
+      tags:
+      - country
   /register:
     post:
       consumes:
